Quote Spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,7 +271,7 @@
 	}
 
 	.row.uniform > * {
-		padding: 0 0 0 2.5em;
+		padding: 0 0 0 0em;
 	}
 
 	.row.uniform {
